# cmake_stm32f4xx

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  toolchain.cmake
inc/: stm32f4xx_hal_conf.h
